k8s/web-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    name: web-server
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    app: web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - image: "wonderflow/gva-server:v1"
          imagePullPolicy: IfNotPresent
          name: gva-server-v1
          ports:
            - containerPort: 8888
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: config-volume
              mountPath: /gva/config.yaml
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: configfile
